backend/interpreter/ConnectITParser.py
# Generated from ConnectIT.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ConnectITParser ( Parser ):

    grammarFileName = "ConnectIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'?'", "','", "'='", "'-->'", "'UNIT'", 
                     "'LAYER'", "'SHAPE'", "'MODEL'", "'NUMBER'", "'BOOLEAN'", 
                     "'<->'", "'<-'", "'<<-'", "'<-('", "')-'", "'<<-('", 
                     "'('", "')'", "'['", "']'", "'BEND'", "'IN'", "'OUT'", 
                     "'BY'", "'AT'", "'TO'", "'SHOW'", "'IF'", "'ELSE IF'", 
                     "'ELSE'", "'REPEAT WHILE'", "'REPEAT'", "'TIMES'", 
                     "'METHOD'", "'RETURNS'", "'RETURN'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'NOT'", "'OR'", "'AND'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COLOR", "PATTERN", "ID", "NUMBER", "BOOLEAN", 
                      "PLUS", "MINUS", "NOT", "OR", "AND", "MUL", "DIV", 
                      "COMPARATOR", "WS", "NEWLINE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_declarationList = 2
    RULE_declaration = 3
    RULE_assignment = 4
    RULE_extension = 5
    RULE_dataType = 6
    RULE_arrowOperator = 7
    RULE_expression = 8
    RULE_logicExpr = 9
    RULE_andExpr = 10
    RULE_compExpr = 11
    RULE_numExpr = 12
    RULE_mulExpr = 13
    RULE_invExpr = 14
    RULE_baseExpr = 15
    RULE_unitExpr = 16
    RULE_bendStatement = 17
    RULE_showStatement = 18
    RULE_ifStmt = 19
    RULE_whileStmt = 20
    RULE_condition = 21
    RULE_statementBlock = 22
    RULE_forStmt = 23
    RULE_functionDeclaration = 24
    RULE_returnExpr = 25

    ruleNames =  [ "program", "statement", "declarationList", "declaration", 
                   "assignment", "extension", "dataType", "arrowOperator", 
                   "expression", "logicExpr", "andExpr", "compExpr", "numExpr", 
                   "mulExpr", "invExpr", "baseExpr", "unitExpr", "bendStatement", 
                   "showStatement", "ifStmt", "whileStmt", "condition", 
                   "statementBlock", "forStmt", "functionDeclaration", "returnExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    COLOR=37
    PATTERN=38
    ID=39
    NUMBER=40
    BOOLEAN=41
    PLUS=42
    MINUS=43
    NOT=44
    OR=45
    AND=46
    MUL=47
    DIV=48
    COMPARATOR=49
    WS=50
    NEWLINE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ConnectITParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ConnectITParser.NEWLINE)
            else:
                return self.getToken(ConnectITParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.StatementContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.StatementContext,i)


        def getRuleIndex(self):
            return ConnectITParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ConnectITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 52
                    self.match(ConnectITParser.NEWLINE) 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 642500265954) != 0):
                self.state = 58
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 60 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 59
                            self.match(ConnectITParser.NEWLINE)
                            self.state = 62 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==51):
                                break

                        self.state = 64
                        self.statement() 
                    self.state = 69
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==51:
                self.state = 75
                self.match(ConnectITParser.NEWLINE)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(ConnectITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationList(self):
            return self.getTypedRuleContext(ConnectITParser.DeclarationListContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ConnectITParser.AssignmentContext,0)


        def showStatement(self):
            return self.getTypedRuleContext(ConnectITParser.ShowStatementContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ConnectITParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(ConnectITParser.ForStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ConnectITParser.IfStmtContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(ConnectITParser.FunctionDeclarationContext,0)


        def returnExpr(self):
            return self.getTypedRuleContext(ConnectITParser.ReturnExprContext,0)


        def getRuleIndex(self):
            return ConnectITParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ConnectITParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 83
                self.match(ConnectITParser.T__0)


            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 7, 8, 9, 10]:
                self.state = 86
                self.declarationList()
                pass
            elif token in [39]:
                self.state = 87
                self.assignment()
                pass
            elif token in [27]:
                self.state = 88
                self.showStatement()
                pass
            elif token in [31]:
                self.state = 89
                self.whileStmt()
                pass
            elif token in [32]:
                self.state = 90
                self.forStmt()
                pass
            elif token in [28]:
                self.state = 91
                self.ifStmt()
                pass
            elif token in [34]:
                self.state = 92
                self.functionDeclaration()
                pass
            elif token in [36]:
                self.state = 93
                self.returnExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(ConnectITParser.DataTypeContext,0)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ConnectITParser.RULE_declarationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationList" ):
                listener.enterDeclarationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationList" ):
                listener.exitDeclarationList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationList" ):
                return visitor.visitDeclarationList(self)
            else:
                return visitor.visitChildren(self)




    def declarationList(self):

        localctx = ConnectITParser.DeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.dataType()
            self.state = 97
            self.declaration()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 98
                self.match(ConnectITParser.T__1)
                self.state = 99
                self.declaration()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ConnectITParser.ID, 0)

        def assignment(self):
            return self.getTypedRuleContext(ConnectITParser.AssignmentContext,0)


        def getRuleIndex(self):
            return ConnectITParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ConnectITParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(ConnectITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ConnectITParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ConnectITParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ConnectITParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ConnectITParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(ConnectITParser.ID)
            self.state = 110
            self.match(ConnectITParser.T__2)
            self.state = 111
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ConnectITParser.ExpressionContext,0)


        def ID(self):
            return self.getToken(ConnectITParser.ID, 0)

        def getRuleIndex(self):
            return ConnectITParser.RULE_extension

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtension" ):
                listener.enterExtension(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtension" ):
                listener.exitExtension(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtension" ):
                return visitor.visitExtension(self)
            else:
                return visitor.visitChildren(self)




    def extension(self):

        localctx = ConnectITParser.ExtensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_extension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.expression()
            self.state = 114
            self.match(ConnectITParser.T__3)
            self.state = 115
            self.match(ConnectITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConnectITParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataType" ):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = ConnectITParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dataType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2016) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrowOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numExpr(self):
            return self.getTypedRuleContext(ConnectITParser.NumExprContext,0)


        def getRuleIndex(self):
            return ConnectITParser.RULE_arrowOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrowOperator" ):
                listener.enterArrowOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrowOperator" ):
                listener.exitArrowOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrowOperator" ):
                return visitor.visitArrowOperator(self)
            else:
                return visitor.visitChildren(self)




    def arrowOperator(self):

        localctx = ConnectITParser.ArrowOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrowOperator)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(ConnectITParser.T__10)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(ConnectITParser.T__11)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.match(ConnectITParser.T__12)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.match(ConnectITParser.T__13)
                self.state = 123
                self.numExpr()
                self.state = 124
                self.match(ConnectITParser.T__14)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 126
                self.match(ConnectITParser.T__15)
                self.state = 127
                self.numExpr()
                self.state = 128
                self.match(ConnectITParser.T__14)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.LogicExprContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.LogicExprContext,i)


        def arrowOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.ArrowOperatorContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.ArrowOperatorContext,i)


        def getRuleIndex(self):
            return ConnectITParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = ConnectITParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.logicExpr()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 96256) != 0):
                self.state = 133
                self.arrowOperator()
                self.state = 134
                self.logicExpr()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.AndExprContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(ConnectITParser.OR)
            else:
                return self.getToken(ConnectITParser.OR, i)

        def getRuleIndex(self):
            return ConnectITParser.RULE_logicExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicExpr" ):
                listener.enterLogicExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicExpr" ):
                listener.exitLogicExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicExpr" ):
                return visitor.visitLogicExpr(self)
            else:
                return visitor.visitChildren(self)




    def logicExpr(self):

        localctx = ConnectITParser.LogicExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logicExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.andExpr()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 142
                self.match(ConnectITParser.OR)
                self.state = 143
                self.andExpr()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.CompExprContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.CompExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(ConnectITParser.AND)
            else:
                return self.getToken(ConnectITParser.AND, i)

        def getRuleIndex(self):
            return ConnectITParser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)




    def andExpr(self):

        localctx = ConnectITParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.compExpr()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 150
                self.match(ConnectITParser.AND)
                self.state = 151
                self.compExpr()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.NumExprContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.NumExprContext,i)


        def COMPARATOR(self):
            return self.getToken(ConnectITParser.COMPARATOR, 0)

        def getRuleIndex(self):
            return ConnectITParser.RULE_compExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompExpr" ):
                listener.enterCompExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompExpr" ):
                listener.exitCompExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompExpr" ):
                return visitor.visitCompExpr(self)
            else:
                return visitor.visitChildren(self)




    def compExpr(self):

        localctx = ConnectITParser.CompExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.numExpr()
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 158
                self.match(ConnectITParser.COMPARATOR)
                self.state = 159
                self.numExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConnectITParser.MulExprContext)
            else:
                return self.getTypedRuleContext(ConnectITParser.MulExprContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(ConnectITParser.PLUS)
            else:
                return self.getToken(ConnectITParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(ConnectITParser.MINUS)
            else:
                return self.getToken(ConnectITParser.MINUS, i)

        def getRuleIndex(self):
            return ConnectITParser.RULE_numExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumExpr" ):
                listener.enterNumExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumExpr" ):
                listener.exitNumExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumExpr" ):
                return visitor.visitNumExpr(self)
            else:
                return visitor.visitChildren(self)




    def numExpr(self):

        localctx = ConnectITParser.NumExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_numExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.mulExpr()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42 or _la==43:
                self.state = 163
                _la = self._input.LA(1)
                if not(_la==42 or _la==43):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 164
                self.mulExpr()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulExprContext(ParserRuleContext):
        __slots__ = 'parser'
